Actualizacion de paginas

--- a/menu_config.html
+++ b/menu_config.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="containerdos fondo">
+    <div  class="container d-flex justify-content-center align-items-center h-100 divdiv containertres fondodos">
+      <div class="containerdos fondo">
         <h1 class="text-center letras"> <b>Menú de configuración</b></h1>
         <form id="configForm">
             <label class="letras2" for="volume"><b>Volumen:</b></label>
@@ -25,7 +26,9 @@
                 <button type="button" id="logoutButton" class="btn btn-primary button3">Salir</button>
             </div>
         </form>
+    </div>  
     </div>
+    
 
     <script src="includes/xcript_config.js"></script>
 </body>
