--- a/menu_config.html
+++ b/menu_config.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="gif">
     <div  class="container d-flex justify-content-center align-items-center h-100 divdiv containertres fondodos">
       <div class="containerdos fondo">
         <h1 class="text-center letras"> <b>Menú de configuración</b></h1>
