--- a/iniciodesesion.html
+++ b/iniciodesesion.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Iniciar Sesión</title>
 </head>
-<body>
+<body class="gif">
     <div class="container d-flex justify-content-center align-items-center h-100">
        <div  class="container d-flex justify-content-center align-items-center h-100 divdiv containertres fondodos">
        
