--- a/menuinicial.html
+++ b/menuinicial.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.cdnfonts.com/css/copperplate" rel="stylesheet">  
 </head>
-<body>
+<body class="gif">
     
 
     <div class="container d-flex justify-content-center align-items-center h-100 divdiv containertres fondodos">
