--- a/iniciodesesion.html
+++ b/iniciodesesion.html
@@ -16,14 +16,15 @@
                 <form>
                     <div class="mb-3">
                         <label for="username" class="form-label">Usuario</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" class="form-control" id="username" name="username">
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" class="form-control" id="password" name="password">
                     </div>
-                    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                    <!--button type="submit" class="btn btn-primary">Iniciar Sesión</button-->
                 </form>
+                <a href="./menuinicial.html"> <button class="btn btn-primary">Iniciar Sesión</button></a>
             </div>
         </div>
     </div>
