--- a/menu_config.html
+++ b/menu_config.html
@@ -21,9 +21,9 @@
             </div>                       
 
             <div style="text-align:center">
-                <button type="button" id="saveButton" class="btn btn-primary button2">Guardar Configuración</button>
+                <a href="./pantalladeljuego.html"><button type="button" id="saveButton" class="btn btn-primary button2">Guardar Configuración</button></a>
                 &nbsp;&nbsp;
-                <button type="button" id="logoutButton" class="btn btn-primary button3">Salir</button>
+               <a href="./iniciodesesion.html"> <button type="button" id="logoutButton" class="btn btn-primary button3">Salir</button></a>
             </div>
         </form>
     </div>  
@@ -31,5 +31,6 @@
     
 
     <script src="includes/xcript_config.js"></script>
+    <script src="./includes/script.js"></script>
 </body>
 </html>
