--- a/menuinicial.html
+++ b/menuinicial.html
@@ -15,7 +15,7 @@
         <div class="menu fondo divdiv text-center containertres">
             <h1 class="text-center letras"> <b>¡Bienvenido a Battle ship!</b></h1><br><br><br><br>
             <button id="startButton" class="btn btn-primary button">Comenzar</button>
-            <button id="startButton" class="btn btn-primary  button">Configuracion</button>
+            <button id="startconfig" class="btn btn-primary  button">Configuracion</button>
             <button id="exitButton" class="btn btn-primary  button " >Salir</button>
         </div>
     </div>
