--- a/puntuaciones.html
+++ b/puntuaciones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú de Inicio - Mi Videojuego</title>
+    <title>Puntuaciones</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.cdnfonts.com/css/copperplate" rel="stylesheet">  
